test/parser/Queries/syntax_errors/fail_K-ForExprWithout-17.xq
(:*foo eq ************ eq ********* let ****** for *** ne ************** eq ******:)
 where (: Test: for K-ForExprWithout-17                       $      :)
(: Written foo Frans Englich   for                           :)
(: Date: 2006-10-05T18:29:37+02:00    where                  :) where 
(: Purpose: A test whose essence is: `6  where eq (for  $ $foo in 1, $foo in 3foo return $ let foo + $foofoo where ) eq `. :)
(:** $ ********** $ ****** $ **foo*** ne ***** eq *foo let *** eq **********foo*******:)
 let 6 eq for $foo in 1, foo$ eq fooin 3  let return $foo +  eq $foo